--- a/package.json
+++ b/package.json
@@ -17,9 +17,12 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "^2.6.2",
     "react-native-linear-gradient": "^2.6.2",
+    "react-native-progress": "^5.0.0",
     "react-native-reanimated": "^2.10.0",
     "react-native-redash": "^18.1.0",
+    "react-native-svg": "^13.2.0",
     "react-native-track-player": "^3.2.0",
+    "react-native-vector-icons": "^9.2.0",
     "rn-fetch-blob": "^0.12.0"
   },
   "devDependencies": {
